# drf-api

./: Makefile  pyproject.toml
api/: settings.py  urls.py
manga/: models.py  serializers.py  urls.py  views.py
manga/migrations/: 0001_initial.py  0002_alter_manga_added_on_alter_manga_price.py  0003_alter_manga_options_alter_manga_added_on.py
